# gitrls

./: .gitignore  gitrls.py  latestReleaseAssets.py  pyproject.toml  requirements.txt
templates/: gitrls.html
