[project]
name = ""
version = ""
description = ""
authors = [
    {name = "James Scholes", email = "james@jamesscholes.com"},
]
dependencies = [
    "requests>=2.31.0",
    "cachecontrol>=0.13.1",
    "filelock>=3.13.1",
    "flask>=3.0.0",
    "gunicorn>=21.2.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

